a11y: Add a11y information to views::Tab and manually ignore its a11y children.

Currently, Views tabs have no a11y information specific to their class. The
fallback then is to use the views::Label inside them for a11y information
instead. This means they report their role as text. Fix this by adding a11y
information to views::Tab to report its role as ui::AX_ROLE_TAB, and handle the
ui::AX_ACTION_SET_SELECTED action and plumb through for Mac.

views::Tab is also a special case where only the selected tab is allowed to be
keyboard focusable. Because of this behavior, the views::Label inside is exposed
to the accessibility tree. Since views::Tab now has its own a11y information,
the views::Label should be hidden from users (see Issue 610589). Make a class
views::TabLabel to manually set its a11y role to ui::AX_ROLE_IGNORED.

BUG=657593, 610589

Review-Url: https://codereview.chromium.org/2578303003
Cr-Commit-Position: refs/heads/master@{#443837}

Former-commit-id: dc7d397153bcbccbc21e12f2ea3568f594699220